@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class ow {
-   public static final aev<dnj<?, ?>> a = or.a("crimson_fungus");
-   public static final aev<dnj<?, ?>> b = or.a("crimson_fungus_planted");
-   public static final aev<dnj<?, ?>> c = or.a("warped_fungus");
-   public static final aev<dnj<?, ?>> d = or.a("warped_fungus_planted");
-   public static final aev<dnj<?, ?>> e = or.a("huge_brown_mushroom");
-   public static final aev<dnj<?, ?>> f = or.a("huge_red_mushroom");
-   public static final aev<dnj<?, ?>> g = or.a("oak");
-   public static final aev<dnj<?, ?>> h = or.a("dark_oak");
-   public static final aev<dnj<?, ?>> i = or.a("birch");
-   public static final aev<dnj<?, ?>> j = or.a("acacia");
-   public static final aev<dnj<?, ?>> k = or.a("spruce");
-   public static final aev<dnj<?, ?>> l = or.a("pine");
-   public static final aev<dnj<?, ?>> m = or.a("jungle_tree");
-   public static final aev<dnj<?, ?>> n = or.a("fancy_oak");
-   public static final aev<dnj<?, ?>> o = or.a("jungle_tree_no_vine");
-   public static final aev<dnj<?, ?>> p = or.a("mega_jungle_tree");
-   public static final aev<dnj<?, ?>> q = or.a("mega_spruce");
-   public static final aev<dnj<?, ?>> r = or.a("mega_pine");
-   public static final aev<dnj<?, ?>> s = or.a("super_birch_bees_0002");
-   public static final aev<dnj<?, ?>> t = or.a("super_birch_bees");
-   public static final aev<dnj<?, ?>> u = or.a("swamp_oak");
-   public static final aev<dnj<?, ?>> v = or.a("jungle_bush");
-   public static final aev<dnj<?, ?>> w = or.a("azalea_tree");
-   public static final aev<dnj<?, ?>> x = or.a("mangrove");
-   public static final aev<dnj<?, ?>> y = or.a("tall_mangrove");
-   public static final aev<dnj<?, ?>> z = or.a("cherry");
-   public static final aev<dnj<?, ?>> A = or.a("oak_bees_0002");
-   public static final aev<dnj<?, ?>> B = or.a("oak_bees_002");
-   public static final aev<dnj<?, ?>> C = or.a("oak_bees_005");
-   public static final aev<dnj<?, ?>> D = or.a("birch_bees_0002");
-   public static final aev<dnj<?, ?>> E = or.a("birch_bees_002");
-   public static final aev<dnj<?, ?>> F = or.a("birch_bees_005");
-   public static final aev<dnj<?, ?>> G = or.a("fancy_oak_bees_0002");
-   public static final aev<dnj<?, ?>> H = or.a("fancy_oak_bees_002");
-   public static final aev<dnj<?, ?>> I = or.a("fancy_oak_bees_005");
-   public static final aev<dnj<?, ?>> J = or.a("fancy_oak_bees");
-   public static final aev<dnj<?, ?>> K = or.a("cherry_bees_005");
+   public static final aey<dnd<?, ?>> a = or.a("crimson_fungus");
+   public static final aey<dnd<?, ?>> b = or.a("crimson_fungus_planted");
+   public static final aey<dnd<?, ?>> c = or.a("warped_fungus");
+   public static final aey<dnd<?, ?>> d = or.a("warped_fungus_planted");
+   public static final aey<dnd<?, ?>> e = or.a("huge_brown_mushroom");
+   public static final aey<dnd<?, ?>> f = or.a("huge_red_mushroom");
+   public static final aey<dnd<?, ?>> g = or.a("oak");
+   public static final aey<dnd<?, ?>> h = or.a("dark_oak");
+   public static final aey<dnd<?, ?>> i = or.a("birch");
+   public static final aey<dnd<?, ?>> j = or.a("acacia");
+   public static final aey<dnd<?, ?>> k = or.a("spruce");
+   public static final aey<dnd<?, ?>> l = or.a("pine");
+   public static final aey<dnd<?, ?>> m = or.a("jungle_tree");
+   public static final aey<dnd<?, ?>> n = or.a("fancy_oak");
+   public static final aey<dnd<?, ?>> o = or.a("jungle_tree_no_vine");
+   public static final aey<dnd<?, ?>> p = or.a("mega_jungle_tree");
+   public static final aey<dnd<?, ?>> q = or.a("mega_spruce");
+   public static final aey<dnd<?, ?>> r = or.a("mega_pine");
+   public static final aey<dnd<?, ?>> s = or.a("super_birch_bees_0002");
+   public static final aey<dnd<?, ?>> t = or.a("super_birch_bees");
+   public static final aey<dnd<?, ?>> u = or.a("swamp_oak");
+   public static final aey<dnd<?, ?>> v = or.a("jungle_bush");
+   public static final aey<dnd<?, ?>> w = or.a("azalea_tree");
+   public static final aey<dnd<?, ?>> x = or.a("mangrove");
+   public static final aey<dnd<?, ?>> y = or.a("tall_mangrove");
+   public static final aey<dnd<?, ?>> z = or.a("cherry");
+   public static final aey<dnd<?, ?>> A = or.a("oak_bees_0002");
+   public static final aey<dnd<?, ?>> B = or.a("oak_bees_002");
+   public static final aey<dnd<?, ?>> C = or.a("oak_bees_005");
+   public static final aey<dnd<?, ?>> D = or.a("birch_bees_0002");
+   public static final aey<dnd<?, ?>> E = or.a("birch_bees_002");
+   public static final aey<dnd<?, ?>> F = or.a("birch_bees_005");
+   public static final aey<dnd<?, ?>> G = or.a("fancy_oak_bees_0002");
+   public static final aey<dnd<?, ?>> H = or.a("fancy_oak_bees_002");
+   public static final aey<dnd<?, ?>> I = or.a("fancy_oak_bees_005");
+   public static final aey<dnd<?, ?>> J = or.a("fancy_oak_bees");
+   public static final aey<dnd<?, ?>> K = or.a("cherry_bees_005");
 
-   private static dqw.a a(csv $$0, csv $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new dqw.a(dsb.a($$0), new dtd($$2, $$3, $$4), dsb.a($$1), new drh(bga.a($$5), bga.a(0), 3), new dre(1, 0, 1));
+   private static dqq.a a(ctc $$0, ctc $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new dqq.a(drv.a($$0), new dsx($$2, $$3, $$4), drv.a($$1), new drb(bgg.a($$5), bgg.a(0), 3), new dqy(1, 0, 1));
    }
 
-   private static dqw.a a() {
-      return a(csw.U, csw.aE, 4, 2, 0, 2).a();
+   private static dqq.a a() {
+      return a(cte.U, cte.aE, 4, 2, 0, 2).a();
    }
 
-   private static dqw.a b() {
-      return a(csw.W, csw.aG, 5, 2, 0, 2).a();
+   private static dqq.a b() {
+      return a(cte.W, cte.aG, 5, 2, 0, 2).a();
    }
 
-   private static dqw.a c() {
-      return a(csw.W, csw.aG, 5, 2, 6, 2).a();
+   private static dqq.a c() {
+      return a(cte.W, cte.aG, 5, 2, 6, 2).a();
    }
 
-   private static dqw.a d() {
-      return a(csw.X, csw.aH, 4, 8, 0, 2);
+   private static dqq.a d() {
+      return a(cte.X, cte.aH, 4, 8, 0, 2);
    }
 
-   private static dqw.a e() {
-      return new dqw.a(dsb.a(csw.U), new dsz(3, 11, 0), dsb.a(csw.aE), new drl(bga.a(2), bga.a(4), 4), new dre(0, 0, 0, OptionalInt.of(4))).a();
+   private static dqq.a e() {
+      return new dqq.a(drv.a(cte.U), new dst(3, 11, 0), drv.a(cte.aE), new drf(bgg.a(2), bgg.a(4), 4), new dqy(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static dqw.a f() {
-      return new dqw.a(
-            dsb.a(csw.Z),
-            new dsx(7, 1, 0, new bgk(bfi.<bgd>a().a(bga.a(1), 1).a(bga.a(2), 1).a(bga.a(3), 1).a()), bgj.a(2, 4), bgj.a(-4, -3), bgj.a(-1, 0)),
-            dsb.a(csw.aJ),
-            new drj(bga.a(4), bga.a(0), bga.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new dre(1, 0, 2)
+   private static dqq.a f() {
+      return new dqq.a(
+            drv.a(cte.Z),
+            new dsr(7, 1, 0, new bgq(bfo.<bgj>a().a(bgg.a(1), 1).a(bgg.a(2), 1).a(bgg.a(3), 1).a()), bgp.a(2, 4), bgp.a(-4, -3), bgp.a(-1, 0)),
+            drv.a(cte.aJ),
+            new drd(bgg.a(4), bgg.a(0), bgg.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new dqy(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(nr<dnj<?, ?>> $$0) {
-      hf<csv> $$1 = $$0.a(jc.e);
-      dlz $$2 = dlz.a(
-         csw.x,
-         csw.y,
-         csw.z,
-         csw.A,
-         csw.B,
-         csw.C,
-         csw.D,
-         csw.E,
-         csw.bR,
-         csw.bS,
-         csw.bT,
-         csw.bU,
-         csw.bV,
-         csw.bW,
-         csw.bX,
-         csw.bY,
-         csw.bZ,
-         csw.ca,
-         csw.cb,
-         csw.cc,
-         csw.cd,
-         csw.ce,
-         csw.cf,
-         csw.cg,
-         csw.cB,
-         csw.dS,
-         csw.fb,
-         csw.fc,
-         csw.fd,
-         csw.fe,
-         csw.fm,
-         csw.fq,
-         csw.fC,
-         csw.gt,
-         csw.gu,
-         csw.ku,
-         csw.kv,
-         csw.kA,
-         csw.kB,
-         csw.kD,
-         csw.oi,
-         csw.oo,
-         csw.ox,
-         csw.oz,
-         csw.oA,
-         csw.oB,
-         csw.oC,
-         csw.ru,
-         csw.rv,
-         csw.rw,
-         csw.rx,
-         csw.ry,
-         csw.rz,
-         csw.rA,
-         csw.rC,
-         csw.rD,
-         csw.rE
+   public static void a(nr<dnd<?, ?>> $$0) {
+      hf<ctc> $$1 = $$0.a(jc.e);
+      dlt $$2 = dlt.a(
+         cte.x,
+         cte.y,
+         cte.z,
+         cte.A,
+         cte.B,
+         cte.C,
+         cte.D,
+         cte.E,
+         cte.bR,
+         cte.bS,
+         cte.bT,
+         cte.bU,
+         cte.bV,
+         cte.bW,
+         cte.bX,
+         cte.bY,
+         cte.bZ,
+         cte.ca,
+         cte.cb,
+         cte.cc,
+         cte.cd,
+         cte.ce,
+         cte.cf,
+         cte.cg,
+         cte.cB,
+         cte.dS,
+         cte.fb,
+         cte.fc,
+         cte.fd,
+         cte.fe,
+         cte.fm,
+         cte.fq,
+         cte.fC,
+         cte.gt,
+         cte.gu,
+         cte.ku,
+         cte.kv,
+         cte.kA,
+         cte.kB,
+         cte.kD,
+         cte.oi,
+         cte.oo,
+         cte.ox,
+         cte.oz,
+         cte.oA,
+         cte.oB,
+         cte.oC,
+         cte.ru,
+         cte.rv,
+         cte.rw,
+         cte.rx,
+         cte.ry,
+         cte.rz,
+         cte.rA,
+         cte.rC,
+         cte.rD,
+         cte.rE
       );
-      or.a($$0, a, dnw.U, new dof(csw.ow.n(), csw.os.n(), csw.kK.n(), csw.oy.n(), $$2, false));
-      or.a($$0, b, dnw.U, new dof(csw.ow.n(), csw.os.n(), csw.kK.n(), csw.oy.n(), $$2, true));
-      or.a($$0, c, dnw.U, new dof(csw.on.n(), csw.oj.n(), csw.op.n(), csw.oy.n(), $$2, false));
-      or.a($$0, d, dnw.U, new dof(csw.on.n(), csw.oj.n(), csw.op.n(), csw.oy.n(), $$2, true));
+      or.a($$0, a, dnq.U, new dnz(cte.ow.o(), cte.os.o(), cte.kK.o(), cte.oy.o(), $$2, false));
+      or.a($$0, b, dnq.U, new dnz(cte.ow.o(), cte.os.o(), cte.kK.o(), cte.oy.o(), $$2, true));
+      or.a($$0, c, dnq.U, new dnz(cte.on.o(), cte.oj.o(), cte.op.o(), cte.oy.o(), $$2, false));
+      or.a($$0, d, dnq.U, new dnz(cte.on.o(), cte.oj.o(), cte.op.o(), cte.oy.o(), $$2, true));
       or.a(
          $$0,
          e,
-         dnw.r,
-         new dqc(
-            dsb.a(csw.eU.n().a(cwp.e, Boolean.valueOf(true)).a(cwp.f, Boolean.valueOf(false))),
-            dsb.a(csw.eW.n().a(cwp.e, Boolean.valueOf(false)).a(cwp.f, Boolean.valueOf(false))),
+         dnq.r,
+         new dpw(
+            drv.a(cte.eT.o().a(cwx.f, Boolean.valueOf(true)).a(cwx.g, Boolean.valueOf(false))),
+            drv.a(cte.eV.o().a(cwx.f, Boolean.valueOf(false)).a(cwx.g, Boolean.valueOf(false))),
             3
          )
       );
       or.a(
          $$0,
          f,
-         dnw.q,
-         new dqc(dsb.a(csw.eV.n().a(cwp.f, Boolean.valueOf(false))), dsb.a(csw.eW.n().a(cwp.e, Boolean.valueOf(false)).a(cwp.f, Boolean.valueOf(false))), 2)
+         dnq.q,
+         new dpw(drv.a(cte.eU.o().a(cwx.g, Boolean.valueOf(false))), drv.a(cte.eV.o().a(cwx.f, Boolean.valueOf(false)).a(cwx.g, Boolean.valueOf(false))), 2)
       );
-      dsp $$3 = new dsp(0.002F);
-      dsp $$4 = new dsp(0.01F);
-      dsp $$5 = new dsp(0.02F);
-      dsp $$6 = new dsp(0.05F);
-      dsp $$7 = new dsp(1.0F);
-      or.a($$0, g, dnw.f, a().c());
+      dsj $$3 = new dsj(0.002F);
+      dsj $$4 = new dsj(0.01F);
+      dsj $$5 = new dsj(0.02F);
+      dsj $$6 = new dsj(0.05F);
+      dsj $$7 = new dsj(1.0F);
+      or.a($$0, g, dnq.f, a().c());
       or.a(
          $$0,
          h,
-         dnw.f,
-         new dqw.a(dsb.a(csw.aa), new dsy(6, 2, 1), dsb.a(csw.aK), new drk(bga.a(0), bga.a(0)), new drd(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         dnq.f,
+         new dqq.a(drv.a(cte.aa), new dss(6, 2, 1), drv.a(cte.aK), new dre(bgg.a(0), bgg.a(0)), new dqx(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      or.a($$0, i, dnw.f, b().c());
-      or.a($$0, j, dnw.f, new dqw.a(dsb.a(csw.Y), new dta(5, 2, 2), dsb.a(csw.aI), new drg(bga.a(2), bga.a(0)), new dre(1, 0, 2)).a().c());
-      or.a($$0, z, dnw.f, f().c());
-      or.a($$0, K, dnw.f, f().a(List.of($$6)).c());
-      or.a($$0, k, dnw.f, new dqw.a(dsb.a(csw.V), new dtd(5, 2, 1), dsb.a(csw.aF), new drs(bgj.a(2, 3), bgj.a(0, 2), bgj.a(1, 2)), new dre(2, 0, 2)).a().c());
-      or.a($$0, l, dnw.f, new dqw.a(dsb.a(csw.V), new dtd(6, 4, 0), dsb.a(csw.aF), new drq(bga.a(1), bga.a(1), bgj.a(3, 4)), new dre(2, 0, 2)).a().c());
-      or.a($$0, m, dnw.f, d().a(ImmutableList.of(new dsq(0.2F), dsu.b, new dsr(0.25F))).a().c());
-      or.a($$0, n, dnw.f, e().c());
-      or.a($$0, o, dnw.f, d().a().c());
+      or.a($$0, i, dnq.f, b().c());
+      or.a($$0, j, dnq.f, new dqq.a(drv.a(cte.Y), new dsu(5, 2, 2), drv.a(cte.aI), new dra(bgg.a(2), bgg.a(0)), new dqy(1, 0, 2)).a().c());
+      or.a($$0, z, dnq.f, f().c());
+      or.a($$0, K, dnq.f, f().a(List.of($$6)).c());
+      or.a($$0, k, dnq.f, new dqq.a(drv.a(cte.V), new dsx(5, 2, 1), drv.a(cte.aF), new drm(bgp.a(2, 3), bgp.a(0, 2), bgp.a(1, 2)), new dqy(2, 0, 2)).a().c());
+      or.a($$0, l, dnq.f, new dqq.a(drv.a(cte.V), new dsx(6, 4, 0), drv.a(cte.aF), new drk(bgg.a(1), bgg.a(1), bgp.a(3, 4)), new dqy(2, 0, 2)).a().c());
+      or.a($$0, m, dnq.f, d().a(ImmutableList.of(new dsk(0.2F), dso.b, new dsl(0.25F))).a().c());
+      or.a($$0, n, dnq.f, e().c());
+      or.a($$0, o, dnq.f, d().a().c());
       or.a(
          $$0,
          p,
-         dnw.f,
-         new dqw.a(dsb.a(csw.X), new dtc(10, 2, 19), dsb.a(csw.aH), new dro(bga.a(2), bga.a(0), 2), new dre(1, 1, 2))
-            .a(ImmutableList.of(dsu.b, new dsr(0.25F)))
+         dnq.f,
+         new dqq.a(drv.a(cte.X), new dsw(10, 2, 19), drv.a(cte.aH), new dri(bgg.a(2), bgg.a(0), 2), new dqy(1, 1, 2))
+            .a(ImmutableList.of(dso.b, new dsl(0.25F)))
             .c()
       );
       or.a(
          $$0,
          q,
-         dnw.f,
-         new dqw.a(dsb.a(csw.V), new dtb(13, 2, 14), dsb.a(csw.aF), new drp(bga.a(0), bga.a(0), bgj.a(13, 17)), new dre(1, 1, 2))
-            .a(ImmutableList.of(new dsn(dsb.a(csw.l))))
+         dnq.f,
+         new dqq.a(drv.a(cte.V), new dsv(13, 2, 14), drv.a(cte.aF), new drj(bgg.a(0), bgg.a(0), bgp.a(13, 17)), new dqy(1, 1, 2))
+            .a(ImmutableList.of(new dsh(drv.a(cte.l))))
             .c()
       );
       or.a(
          $$0,
          r,
-         dnw.f,
-         new dqw.a(dsb.a(csw.V), new dtb(13, 2, 14), dsb.a(csw.aF), new drp(bga.a(0), bga.a(0), bgj.a(3, 7)), new dre(1, 1, 2))
-            .a(ImmutableList.of(new dsn(dsb.a(csw.l))))
+         dnq.f,
+         new dqq.a(drv.a(cte.V), new dsv(13, 2, 14), drv.a(cte.aF), new drj(bgg.a(0), bgg.a(0), bgp.a(3, 7)), new dqy(1, 1, 2))
+            .a(ImmutableList.of(new dsh(drv.a(cte.l))))
             .c()
       );
-      or.a($$0, s, dnw.f, c().a(ImmutableList.of($$3)).c());
-      or.a($$0, t, dnw.f, c().a(ImmutableList.of($$7)).c());
-      or.a($$0, u, dnw.f, a(csw.U, csw.aE, 5, 3, 0, 3).a(ImmutableList.of(new dsr(0.25F))).c());
-      or.a($$0, v, dnw.f, new dqw.a(dsb.a(csw.X), new dtd(1, 0, 0), dsb.a(csw.aE), new dri(bga.a(2), bga.a(1), 2), new dre(0, 0, 0)).c());
+      or.a($$0, s, dnq.f, c().a(ImmutableList.of($$3)).c());
+      or.a($$0, t, dnq.f, c().a(ImmutableList.of($$7)).c());
+      or.a($$0, u, dnq.f, a(cte.U, cte.aE, 5, 3, 0, 3).a(ImmutableList.of(new dsl(0.25F))).c());
+      or.a($$0, v, dnq.f, new dqq.a(drv.a(cte.X), new dsx(1, 0, 0), drv.a(cte.aE), new drc(bgg.a(2), bgg.a(1), 2), new dqy(0, 0, 0)).c());
       or.a(
          $$0,
          w,
-         dnw.f,
-         new dqw.a(
-               dsb.a(csw.U),
-               new dsw(4, 2, 0, 3, bgj.a(1, 2)),
-               new dsl(bfi.<dfj>a().a(csw.aM.n(), 3).a(csw.aN.n(), 1)),
-               new drr(bga.a(3), bga.a(0), bga.a(2), 50),
-               new dre(1, 0, 1)
+         dnq.f,
+         new dqq.a(
+               drv.a(cte.U),
+               new dsq(4, 2, 0, 3, bgp.a(1, 2)),
+               new dsf(bfo.<dfd>a().a(cte.aM.o(), 3).a(cte.aN.o(), 1)),
+               new drl(bgg.a(3), bgg.a(0), bgg.a(2), 50),
+               new dqy(1, 0, 1)
             )
-            .a(dsb.a(csw.rG))
+            .a(drv.a(cte.rG))
             .b()
             .c()
       );
       or.a(
          $$0,
          x,
-         dnw.f,
-         new dqw.a(
-               dsb.a(csw.ab),
-               new dtg(2, 1, 4, bgj.a(1, 4), 0.5F, bgj.a(0, 1), $$1.b(aps.cb)),
-               dsb.a(csw.aL),
-               new drr(bga.a(3), bga.a(0), bga.a(2), 70),
+         dnq.f,
+         new dqq.a(
+               drv.a(cte.ab),
+               new dta(2, 1, 4, bgp.a(1, 4), 0.5F, bgp.a(0, 1), $$1.b(apv.cb)),
+               drv.a(cte.aL),
+               new drl(bgg.a(3), bgg.a(0), bgg.a(2), 70),
                Optional.of(
-                  new drx(
-                     bgj.a(1, 3),
-                     dsb.a(csw.ac),
-                     Optional.of(new drv(dsb.a(csw.rz), 0.5F)),
-                     new drw($$1.b(aps.cc), hi.a(csv::q, csw.rH, csw.ad), dsb.a(csw.ad), 8, 15, 0.2F)
+                  new drr(
+                     bgp.a(1, 3),
+                     drv.a(cte.ac),
+                     Optional.of(new drp(drv.a(cte.rz), 0.5F)),
+                     new drq($$1.b(apv.cc), hi.a(ctc::r, cte.rH, cte.ad), drv.a(cte.ad), 8, 15, 0.2F)
                   )
                ),
-               new dre(2, 0, 2)
+               new dqy(2, 0, 2)
             )
             .a(
                List.of(
-                  new dsr(0.125F), new dso(0.14F, 1, 0, new dsh(dsb.a(csw.E.n().a(cxn.c, Boolean.valueOf(true))), cxn.a, bgj.a(0, 4)), 2, List.of(ha.a)), $$4
+                  new dsl(0.125F), new dsi(0.14F, 1, 0, new dsb(drv.a(cte.E.o().a(cxv.d, Boolean.valueOf(true))), cxv.b, bgp.a(0, 4)), 2, List.of(ha.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class ow {
       or.a(
          $$0,
          y,
-         dnw.f,
-         new dqw.a(
-               dsb.a(csw.ab),
-               new dtg(4, 1, 9, bgj.a(1, 6), 0.5F, bgj.a(0, 1), $$1.b(aps.cb)),
-               dsb.a(csw.aL),
-               new drr(bga.a(3), bga.a(0), bga.a(2), 70),
+         dnq.f,
+         new dqq.a(
+               drv.a(cte.ab),
+               new dta(4, 1, 9, bgp.a(1, 6), 0.5F, bgp.a(0, 1), $$1.b(apv.cb)),
+               drv.a(cte.aL),
+               new drl(bgg.a(3), bgg.a(0), bgg.a(2), 70),
                Optional.of(
-                  new drx(
-                     bgj.a(3, 7),
-                     dsb.a(csw.ac),
-                     Optional.of(new drv(dsb.a(csw.rz), 0.5F)),
-                     new drw($$1.b(aps.cc), hi.a(csv::q, csw.rH, csw.ad), dsb.a(csw.ad), 8, 15, 0.2F)
+                  new drr(
+                     bgp.a(3, 7),
+                     drv.a(cte.ac),
+                     Optional.of(new drp(drv.a(cte.rz), 0.5F)),
+                     new drq($$1.b(apv.cc), hi.a(ctc::r, cte.rH, cte.ad), drv.a(cte.ad), 8, 15, 0.2F)
                   )
                ),
-               new dre(3, 0, 2)
+               new dqy(3, 0, 2)
             )
             .a(
                List.of(
-                  new dsr(0.125F), new dso(0.14F, 1, 0, new dsh(dsb.a(csw.E.n().a(cxn.c, Boolean.valueOf(true))), cxn.a, bgj.a(0, 4)), 2, List.of(ha.a)), $$4
+                  new dsl(0.125F), new dsi(0.14F, 1, 0, new dsb(drv.a(cte.E.o().a(cxv.d, Boolean.valueOf(true))), cxv.b, bgp.a(0, 4)), 2, List.of(ha.a)), $$4
                )
             )
             .a()
             .c()
       );
-      or.a($$0, A, dnw.f, a().a(List.of($$3)).c());
-      or.a($$0, B, dnw.f, a().a(List.of($$5)).c());
-      or.a($$0, C, dnw.f, a().a(List.of($$6)).c());
-      or.a($$0, D, dnw.f, b().a(List.of($$3)).c());
-      or.a($$0, E, dnw.f, b().a(List.of($$5)).c());
-      or.a($$0, F, dnw.f, b().a(List.of($$6)).c());
-      or.a($$0, G, dnw.f, e().a(List.of($$3)).c());
-      or.a($$0, H, dnw.f, e().a(List.of($$5)).c());
-      or.a($$0, I, dnw.f, e().a(List.of($$6)).c());
-      or.a($$0, J, dnw.f, e().a(List.of($$7)).c());
+      or.a($$0, A, dnq.f, a().a(List.of($$3)).c());
+      or.a($$0, B, dnq.f, a().a(List.of($$5)).c());
+      or.a($$0, C, dnq.f, a().a(List.of($$6)).c());
+      or.a($$0, D, dnq.f, b().a(List.of($$3)).c());
+      or.a($$0, E, dnq.f, b().a(List.of($$5)).c());
+      or.a($$0, F, dnq.f, b().a(List.of($$6)).c());
+      or.a($$0, G, dnq.f, e().a(List.of($$3)).c());
+      or.a($$0, H, dnq.f, e().a(List.of($$5)).c());
+      or.a($$0, I, dnq.f, e().a(List.of($$6)).c());
+      or.a($$0, J, dnq.f, e().a(List.of($$7)).c());
    }
 }
